# ivymart_backend

./: .env  pyproject.toml
ivymart/: apps.py  models.py
ivymart/migrations/: 0001_initial.py  0002_order_shippingaddress_review_orderitem.py  0003_alter_product_image.py  0004_review_heading.py  0005_shippingaddress_state.py  0006_payment.py  0007_order_order_id.py
ivymart/serializers/: jwtSerializers.py  orderSerializers.py  productSerializers.py  userSerializers.py
ivymart/urls/: order_urls.py  product_urls.py  stripe_urls.py  user_urls.py
ivymart/views/: .env  Testfile.py  jwt_views.py  order_views.py  payment_view.py  product_views.py  stripePayment_view.py  user_views.py
ivymart_backend/: asgi.py  settings.py  urls.py  wsgi.py
